# ws-homework

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: abd3ef7fc73c_creating_users_table.py
app/: config.py  connections.py  database.py  index.html  main.py
app/frontend/: chat.html  index.html  main.js
app/models/: base.py  user.py
app/utils/: auth.py  generate_token.py
